# bot_telegram

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test.py
src/: app.py
src/api/: minde.py  openai.py
src/config/: settings.py
src/database/: model.py  repo.py
src/err/: exceptions.py
src/handlers/: __init__.py  basic.py  helpers.py  insurance.py  openai.py
src/keyboard/: main.py
src/locales/: message_en.json  message_ru.json  message_ua.json
src/middleware/: middleware.py
src/scenario/: insurance.py
src/service/: generated_doc.py
tmp/: insurance_template.txt
